Bug 443177 - Cantor crashes when opening a new tab if all other tabs had been closed
Summary: Cantor crashes when opening a new tab if all other tabs had been closed
Status: VERIFIED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.1
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-30 22:54 UTC by tgnff242
Modified: 2021-10-07 13:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tgnff242 2021-09-30 22:54:49 UTC
STEPS TO REPRODUCE

1. Start cantor.
2. Close every open tab.
3. Try to open a new tab-backend, or open a pre-existing file.

I'm using archlinux, so I can't provide a stack trace with symbols, however, following the STR will crash cantor consistently.


SOFTWARE VERSIONS

KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86
Qt Version: 5.15.2
Cantor 21.08.1
Comment 1 Alexander Semke 2021-10-02 15:10:15 UTC
Git commit c79dd271010266e06523598c6993c55f32eb0668 by Alexander Semke.
Committed on 02/10/2021 at 15:08.
Pushed by asemke into branch 'release/21.08'.

Don't crash when all worksheets were closed and a new one is created
again.
FIXED-IN: 21.08.2

M  +5    -0    src/cantor.cpp

https://invent.kde.org/education/cantor/commit/c79dd271010266e06523598c6993c55f32eb0668
Comment 2 Alexander Semke 2021-10-02 15:11:31 UTC
(In reply to tgnff242 from comment #0)
> STEPS TO REPRODUCE
> 
> 1. Start cantor.
> 2. Close every open tab.
> 3. Try to open a new tab-backend, or open a pre-existing file.
Thanks for reporting this issue. It will be fixed in the next patch release.
Comment 3 Alexander Semke 2021-10-05 06:20:26 UTC
Git commit 82574ffb8160fca05eb5c91cad46b36316bdc165 by Alexander Semke.
Committed on 05/10/2021 at 06:19.
Pushed by asemke into branch 'master'.

Squach commit of multiple fixes that were done recently in
release/21.08 branch.

Don't crash when calling the context menu of a rendered markdown entry.

Don't crash when all worksheets were closed and a new one is created
again.
FIXED-IN: 21.08.2

Don't create a new worksheet via the double click in the "Select the backend" dialog if the backend is not enabled.

Don't shown the "move up" and "move down" actions in the context menu of a worksheet entry if the entry is already at the very top or very bottom, respectively.

Since we don't have the undo/redo functionality yet, removing an entry by an error can result in a lost of a lot of work.
To at least remedy this problem, pop up a Yes/No-message box and ask the user to confirm.

Re-activated the action toolbar again for worksheet entries (seems to be a regression) and added short cuts for remove, move up and move down actions.

Mark the project as modified also when the entries are move or deleted and properly notify the user about the changes in the window title bar and in the tab names.

Remove the wait cursor prior to showing the message box on LaTeX errors in Jupytor notebooks.

M  +4    -1    src/backendchoosedialog.cpp
M  +24   -5    src/cantor.cpp
M  +1    -1    src/cantor.h
M  +2    -0    src/cantor_part.cpp
M  +3    -0    src/markdownentry.cpp
M  +1    -4    src/worksheet.cpp
M  +36   -15   src/worksheetentry.cpp

https://invent.kde.org/education/cantor/commit/82574ffb8160fca05eb5c91cad46b36316bdc165
Comment 4 tgnff242 2021-10-07 13:23:41 UTC
I can verify the fix. Thank you.